@@ -1,5 +1,8 @@
+Wed 10 Aug 2022 Aleksey Kravchenko
+	* New option --unverified to print unverified files
+
 Mon 01 Aug 2022 Aleksey Kravchenko
-	* New option --missing, to print missing files
+	* New option --missing to print missing files
 
 Tue 14 Jun 2022 Aleksey Kravchenko
 	* === Version 1.4.3 ===
